<resources>
    <string name="app_name">Controller TV</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="myTv">My TV</string>
    <string name="myRemoteControl">My Remote Control</string>
    <string name="power">Power</string>
    <string name="vol">Volume</string>
    <string name="channel">Channel </string>
    <string name="favChannel">Favorite Channel</string>
    <string name="tvPowerLabel">TV Power: </string>
    <string name="volLabel">Speaker Volume: </string>
    <string name="currentChannel">Current Channel: </string>
    <string name="up">+</string>
    <string name="down">-</string>
    <string name="CNN">CNN</string>
    <string name="Netflix">Netflix</string>
    <string name="sling">Sling</string>
    <string name="youtube">Youtube</string>
    <string name="configure">Configure</string>
    <string name="dvr">Switch to DVR</string>
    <string name="myDVR">My DVR</string>
    <string name="DVRControl">DVR Remote Control</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="ff">Fast Forward</string>
    <string name="rw">Fast Rewind</string>
    <string name="record">Record</string>
    <string name="backToTV">Back To TV</string>
    <string name="powerDVR">DVR Power: </string>
    <string name="stateDVR">State: </string>
    <string name="powerDVRLabel">Off</string>
    <string name="stateDVRLabel">Stopped</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="label">Label </string>
    <string name="left">Left</string>
    <string name="middle">Middle</string>
    <string name="right">Right</string>
    <string name="favChanButton">Favorite\nChannel\nButton</string>
    <string name="configFavChan">Configure Favorite Channels</string>
</resources>
