<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csc472.project2.browningjamesprogrammingassignment4.ConfigActivity">

    <TextView
        android:text="@string/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@+id/editText"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:layout_width="256dp"
        android:layout_height="38dp"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button29"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:inputType="number"
        android:text="0" />

    <Button
        android:text="@string/cancel"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toLeftOf="@+id/button15"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:text="@string/save"
        android:layout_height="wrap_content"
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <Button
        android:text="@string/down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button16"
        android:layout_marginEnd="16dp"
        android:onClick="upOrDownClick"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        android:layout_marginBottom="8dp" />

    <Button
        android:text="@string/up"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:id="@+id/button17"
        android:onClick="upOrDownClick"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toLeftOf="@+id/button16" />

    <Button
        android:text="@string/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button18"
        app:layout_constraintRight_toLeftOf="@+id/button17"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toTopOf="@+id/button"
        android:onClick="onButtonClick"
        android:layout_marginBottom="8dp" />

    <Button
        android:text="@string/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button22"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onButtonClick"
        app:layout_constraintBottom_toTopOf="@+id/button16" />

    <Button
        android:text="@string/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button23"
        android:onClick="onButtonClick"
        app:layout_constraintRight_toLeftOf="@+id/button22"
        app:layout_constraintBottom_toTopOf="@+id/button17" />

    <Button
        android:text="@string/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button24"
        android:onClick="onButtonClick"
        app:layout_constraintRight_toLeftOf="@+id/button23"
        app:layout_constraintBottom_toTopOf="@+id/button18" />

    <Button
        android:text="@string/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button25"
        android:layout_marginEnd="16dp"
        android:onClick="onButtonClick"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button22" />

    <Button
        android:text="@string/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button26"
        android:onClick="onButtonClick"
        app:layout_constraintRight_toLeftOf="@+id/button25"
        app:layout_constraintBottom_toTopOf="@+id/button23" />

    <Button
        android:text="@string/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button27"
        android:onClick="onButtonClick"
        app:layout_constraintBottom_toTopOf="@+id/button24"
        app:layout_constraintRight_toLeftOf="@+id/button26"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:text="@string/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button28"
        android:onClick="onButtonClick"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button25" />

    <Button
        android:text="@string/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button29"
        android:onClick="onButtonClick"
        app:layout_constraintRight_toLeftOf="@+id/button28"
        app:layout_constraintBottom_toTopOf="@+id/button26" />

    <Button
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button30"
        app:layout_constraintRight_toLeftOf="@+id/button29"
        app:layout_constraintBottom_toTopOf="@+id/button27"
        android:layout_marginStart="16dp"
        android:onClick="onButtonClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <EditText
        android:layout_width="256dp"
        android:layout_height="38dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button29"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <TextView
        android:text="@string/channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText2"
        app:layout_constraintRight_toLeftOf="@+id/editText2"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <RadioGroup
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        android:layout_marginBottom="8dp"
        android:layout_margin="20dp"
        android:id="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.93">

        <RadioButton
            android:text="@string/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton5"
            android:checked="true"
            android:onClick="onRadioButtonClick"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClick"
            android:id="@+id/radioButton4" />

        <RadioButton
            android:text="@string/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton6"
            android:onClick="onRadioButtonClick"
            android:layout_weight="1" />

    </RadioGroup>

    <TextView
        android:text="@string/favChanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintRight_toLeftOf="@+id/radioGroup"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:textSize="20sp" />

    <TextView
        android:text="@string/configFavChan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:textSize="22sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
